# face_recognition_api/app/schemas/user.py
@@ -5,4 +5,4 @@ from pydantic import BaseModel
 
 class UserBase(BaseModel):
     user_id: str
-    branch_id: str
+    group_id: str
